<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistrarActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="150dp"
            android:text="@string/Welcome"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:textStyle="bold"
            android:text="@string/Name"/>
        <EditText
            android:id="@+id/edtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/TypeName"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:inputType="text"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:textStyle="bold"
            android:text="@string/Gender"/>
        <RadioGroup
            android:id="@+id/rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <RadioButton
                android:id="@+id/rbFem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/Female"
                ></RadioButton>
            <RadioButton
                android:id="@+id/rbMasc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/Male"
                ></RadioButton>
            <RadioButton
                android:id="@+id/rbOth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/Other"
                ></RadioButton>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:textStyle="bold"
            android:text="@string/Age"/>
        <EditText
            android:id="@+id/edtOld"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/TypeAge"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:inputType="number"
            />
        <CheckBox
            android:id="@+id/cbCondiciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/conditions"
            android:checked="true"/>
        <Button
            android:id="@+id/btnCancel"
            android:onClick="Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msgCancel"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            />
        <Button
            android:id="@+id/btnRegistrarNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:layout_marginRight="16dp"
            android:onClick="RegistrarNext"
            android:text="@string/msgNext" />
    </LinearLayout>
</LinearLayout>