<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FoodCategoryActivity">
    <TextView
        android:id="@+id/tvChooseCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        android:text="@string/ChooseCategory"/>
    <RadioGroup
        android:id="@+id/rgFoodCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        >
        <RadioButton
            android:id="@+id/rbMeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/Meat"
            ></RadioButton>
        <RadioButton
            android:id="@+id/rbSalad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/Salad"
            ></RadioButton>
        <RadioButton
            android:id="@+id/rbFruit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/Fruits"
            ></RadioButton>
    </RadioGroup>
    <Button
        android:id="@+id/btnFoodNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="230dp"
        android:layout_marginRight="16dp"
        android:onClick="FoodNext"
        android:text="@string/msgNext" />

</LinearLayout>